--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ itsdangerous==2.0.1
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 pillow==10.4.0
+python-dotenv==1.0.1
 SQLAlchemy==2.0.31
 typing_extensions==4.12.2
 Werkzeug==3.0.3
